# Scrapy_HW

./: pyproject.toml
HW/: book_data.jsonl  merchant_data.jsonl
HW/HW/: items.py  pipelines.py  settings.py
HW/HW/spiders/: chitai_gorod.py  merchantpoint.py
HW/book_search_service/: service.py
